--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </head>
   
     <body>
-        <h1>Hello   World!</h1>
+        <h1 class="h1">Hello   World!</h1>
 
-        <p>
+        <p id="text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fuga
             sed, omnis facilis ipsam ex minus nobis porro, doloremque
             praesentium suscipit. Praesentium illo dolore esse unde molestiae
@@ -24,7 +24,7 @@
             voluptatem similique rem!
         </p>
 
-        <h2>About iCET</h2>
+        <h2 class="h2">About iCET</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam
             excepturi quam quibusdam molestias, dolor ducimus est aperiam
             voluptate quas officia totam autem. Harum eius asperiores beatae,
